added admin dashboard

--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -41,7 +41,7 @@
                                                     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                                                       <li style="padding: 15px;">  <strong>Register as ... </strong></li>  
                                                       <li><a class="dropdown-item" href="{% url 'students:register' %}">Student</a></li>
-                                                      <li><a class="dropdown-item" href="{% url 'teachers:register' %}"> Teacher</a></li>
+                                                      <li><a class="dropdown-item" href="{% url 'lecturers:register' %}"> Teacher</a></li>
                                                       <li><a class="dropdown-item" href="{% url 'admins:register' %}">Admin</a></li>
                                                     </ul>
                                                   </div>
