--- a/templates/teachers/single_session.html
+++ b/templates/teachers/single_session.html
@@ -25,7 +25,7 @@
 
         <br>
         <br><br>
-        <a href="#" class="btn btn-success"> mark attendece</a>
+        <a href="#" class="btn btn-success"> mark attendence</a>
     
 
 {% endblock %}
