--- a/templates/teachers/single_teacher.html
+++ b/templates/teachers/single_teacher.html
@@ -47,7 +47,7 @@
     <div class="col-lg-7">
         <div class="card">
             <div class="card-header">
-                 <i class="fa fa-align-justify"></i> Teachers Image
+                 <i class="fa fa-align-justify"></i> lecturers Image
             </div>
             <div class="card-body">
                 <img src="{{ single_teacher.teacher_img.url }}" class="img-fluid" />
