--- a/templates/teachers/teacher_list.html
+++ b/templates/teachers/teacher_list.html
@@ -11,7 +11,7 @@
         <br>
         <div class="card">
             <div class="card-header">
-                <i class="fa fa-align-justify"></i> Teachers List</div>
+                <i class="fa fa-align-justify"></i> lecturers List</div>
             <div class="card-body">
                 <table class="table table-responsive-sm table-bordered table-striped table-sm">
                     <thead>
@@ -35,13 +35,13 @@
                                 <td> {{teacher.module.module_name}}</td>
                              
                                 <td>
-                                    <a href="{% url 'teachers:single_teacher' teacher.id %}">
+                                    <a href="{% url 'lecturers:single_teacher' teacher.id %}">
                                         <button type="button" class="btn btn-primary">Details</button>
                                     </a>
-                                    <a href="{% url 'teachers:edit_teacher' teacher.id %}">
+                                    <a href="{% url 'lecturers:edit_teacher' teacher.id %}">
                                         <button type="button" class="btn btn-info"><i class="fa fa-edit"></i></button>
                                     </a>
-                                    <a href="{% url 'teachers:delete_teacher' teacher.id %}">
+                                    <a href="{% url 'lecturers:delete_teacher' teacher.id %}">
                                         <button type="button" class="btn btn-danger">X</button>
                                     </a>
                                 </td>
@@ -61,9 +61,9 @@
     <div class="pagination">
         <span class="step-links">
 
-            {% if teachers.has_previous %}
+            {% if lecturers.has_previous %}
               
-                <a style="text-decoration: none;" class="position-relative " href="?page={{ teachers.previous_page_number }}"> 
+                <a style="text-decoration: none;" class="position-relative " href="?page={{ lecturers.previous_page_number }}"> 
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left" viewBox="0 0 16 16">
                         <path fill-rule="evenodd" d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8z"/>
                       </svg> previous
@@ -77,11 +77,11 @@
             {% endif %}
 
             <span class="position-relative " style="font-weight: 600; margin-left: 0.8cm; margin-right: 0.8cm;">
-                 {{ teachers.number }} of {{ teachers.paginator.num_pages }} 
+                 {{ lecturers.number }} of {{ lecturers.paginator.num_pages }} 
             </span>    
 
-            {% if teachers.has_next %}
-                <a style="text-decoration: none;"class="position-relative " href="?page={{ teachers.next_page_number }}">
+            {% if lecturers.has_next %}
+                <a style="text-decoration: none;"class="position-relative " href="?page={{ lecturers.next_page_number }}">
                     next <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right" viewBox="0 0 16 16">
                         <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"/>
                       </svg></a>
