--- a/templates/base/sidebar.html
+++ b/templates/base/sidebar.html
@@ -42,14 +42,14 @@
                     </li>
                     <li class="nav-item nav-dropdown">
                         <a class="nav-link nav-dropdown-toggle" href="#">
-                            <i class="nav-icon icon-user"></i> Teachers</a>
+                            <i class="nav-icon icon-user"></i> lecturers</a>
                         <ul class="nav-dropdown-items">
                             <li class="nav-item">
-                                <a class="nav-link" href="{% url 'teachers:teacher_list' %}">
+                                <a class="nav-link" href="{% url 'lecturers:teacher_list' %}">
                                     <i class="nav-icon icon-puzzle"></i> Teacher List</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="{% url 'teachers:create_teacher' %}">
+                                <a class="nav-link" href="{% url 'lecturers:create_teacher' %}">
                                     <i class="nav-icon icon-puzzle"></i> Create New Teacher</a>
                             </li>
                         </ul>
@@ -97,15 +97,15 @@
                     </li>
                     <li class="nav-item nav-dropdown">
                         <a class="nav-link nav-dropdown-toggle" href="#">
-                            <i class="nav-icon icon-user"></i> Teachers</a>
+                            <i class="nav-icon icon-user"></i> lecturers</a>
                         <ul class="nav-dropdown-items">
                             <li class="nav-item">
-                                <a class="nav-link" href="{% url 'teachers:teacher_list' %}">
-                                    <i class="nav-icon icon-puzzle"></i> Teacher List</a>
+                                <a class="nav-link" href="{% url 'lecturers:teacher_list' %}">
+                                    <i class="nav-icon icon-puzzle"></i> Lecturers List</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="{% url 'teachers:create_teacher' %}">
-                                    <i class="nav-icon icon-puzzle"></i> Create New Teacher</a>
+                                <a class="nav-link" href="{% url 'lecturers:create_teacher' %}">
+                                    <i class="nav-icon icon-puzzle"></i> Add New Lecturer</a>
                             </li>
                         </ul>
                     </li>
