--- a/templates/students/student_list.html
+++ b/templates/students/student_list.html
@@ -54,7 +54,7 @@
         </div>
     </div>
 </div>
-{% elif logged_in_as_teacher in teachers %}
+{% elif logged_in_as_teacher in lecturers %}
 
 <div class="row">
     <div class="col-lg-12">
