admin can approve people

--- a/templates/base/sidebar.html
+++ b/templates/base/sidebar.html
@@ -79,7 +79,7 @@
                     </ul>
                 </li>
           
-                {% else %}
+                {% elif logged_in_as_admin in admins %}
                     <li class="nav-item nav-dropdown">
                         <a class="nav-link nav-dropdown-toggle" href="#">
                             <i class="nav-icon icon-user"></i> Student</a>
@@ -109,6 +109,51 @@
                             </li>
                         </ul>
                     </li>
+                    {% else %}
+                    <li class="nav-item nav-dropdown">
+                        <a class="nav-link nav-dropdown-toggle" href="#">
+                            <i class="nav-icon icon-user"></i> Student</a>
+                        <ul class="nav-dropdown-items">
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'students:student_list' %}">
+                                    <i class="nav-icon icon-puzzle"></i> Student List</a>
+                            </li>
+                            
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'students:student_regi' %}">
+                                    <i class="nav-icon icon-puzzle"></i> Registration</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="nav-item nav-dropdown">
+                        <a class="nav-link nav-dropdown-toggle" href="#">
+                            <i class="nav-icon icon-user"></i> lecturers</a>
+                        <ul class="nav-dropdown-items">
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'lecturers:teacher_list' %}">
+                                    <i class="nav-icon icon-puzzle"></i> Lecturers List</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'lecturers:create_teacher' %}">
+                                    <i class="nav-icon icon-puzzle"></i> Add New Lecturer</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="nav-item nav-dropdown">
+                        <a class="nav-link nav-dropdown-toggle" href="#">
+                            <i class="nav-icon icon-user"></i> admins</a>
+                        <ul class="nav-dropdown-items">
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">
+                                    <i class="nav-icon icon-puzzle"></i> admins List</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">
+                                    <i class="nav-icon icon-puzzle"></i> Add New admin</a>
+                            </li>
+                        </ul>
+                    </li>
+
             {% endif %}
         </ul>
     </nav>
