--- a/templates/home.html
+++ b/templates/home.html
@@ -4,11 +4,13 @@
 
 
 {% block content %}
+
+
  <div class="container-fluid" style="width:95%">  
      <br>
      <!-- ################### Student Dashboard ####################################-->
     {% if logged_in_as_student in students %}
-
+        {% if logged_in_as_student.approved is True  %}
 
         <h3> Logged In As Student</h3>
         <hr>
@@ -71,24 +73,17 @@
             </div>
           
         </div>
+        {% else %}
+            <h3>Waiting for approval from admin</h3>
+        {% endif %}
 <!-- ################### End of Student Dashboard ####################################-->
-
-
-
-       
-     
-    
-
-
-
-
 
 
 
 
 <!-- ################### Lecturers Dashboard ####################################-->
     {% elif logged_in_as_teacher in teachers %}    
-        
+        {% if logged_in_as_teacher.approved is True  %}
     <h3> Logged In As Lecturer</h3>
     <hr>
     <div >
@@ -118,33 +113,19 @@
              <a href="{% url 'lecturers:session' %}"> Create New Session</a>
         </div>
      </div>
-  
-         
+        {% else %}
+            <h3>Waiting for approval from admin </h3>
+         {% endif %}
 
 <!-- ################### End of lecturers Dashboard ####################################-->
 
 
+<!-- ################### Admin Dashboard ####################################-->
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    {% else %}
+    {% elif logged_in_as_admin in admins %}
+        {% if logged_in_as_admin.approved is True  %}
         <h3>Logged in as Admin</h3>
+       
         <hr>
         <div class="row">
             <div class="col-4">
@@ -179,9 +160,68 @@
                 </div>
             </div>
         </div>
+            {% else %}
+                <h3> Waiting for approval from Super Admin</h3>
+        {% endif %}
+
+
+        {% else %}
+        <h3>Logged in as Super Admin</h3>
+       
+        <hr>
+        <div class="row">
+            <div class="col-4">
+                <div class="card card-body">
+                    <center>
+                        <h1>
+                            <strong>
+                                {{students.count}}
+                            </strong>
+                        </h1>
+                        <p>
+                            Total enrolled students
+                        </p>
+                        <a href="{% url 'students:student_list' %}">view students</a>
+                    </center>
+                </div>
+            </div>
+
+            <div class="col-4">
+                <div class="card card-body">
+                    <center>
+                        <h1>
+                            <strong>
+                                {{teachers.count}}
+                            </strong>
+                        </h1>
+                        <p>
+                            Total employed lecturers
+                        </p>
+                        <a href="{% url 'lecturers:teacher_list' %}">view lecturers</a>
+                    </center>
+                </div>
+            </div>
+
+            <div class="col-4">
+                <div class="card card-body">
+                    <center>
+                        <h1>
+                            <strong>
+                                {{admins.count}}
+                            </strong>
+                        </h1>
+                        <p>
+                            Total employed administrators
+                        </p>
+                        <a href="#">view admins</a>
+                    </center>
+                </div>
+            </div>
+
+        </div>
     {% endif %}
 </div>
 
-
+<!-- ################### End of Admin Dashboard ####################################-->
 
 {% endblock %}
